# fabric

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  memory.json
.github/workflows/: ci.yml  release.yml
.spool/events/: 2026-01-25.jsonl
benches/: fabric_benchmarks.rs
crates/spool/: Cargo.toml
crates/spool-cli/: Cargo.toml
crates/spool-cli/src/: main.rs
crates/spool-cli/tests/: cli_integration_tests.rs
crates/spool-ui/: Cargo.toml  README.md
crates/spool-ui/src/: app.rs  main.rs  ui.rs
crates/spool/benches/: spool_benchmarks.rs
crates/spool/src/: cli.rs  validation.rs  writer.rs
crates/spool/tests/: archive_tests.rs  cli_tests.rs  context_tests.rs  state_tests.rs  validation_tests.rs  writer_tests.rs
docs/: CLI_GUIDE.md  getting-started.md
script/: build-release.sh
skills/: spool.md
src/: archive.rs  cli.rs  concurrency.rs  context.rs  event.rs  lib.rs  main.rs  shell.rs  state.rs  validation.rs  writer.rs
tests/: archive_tests.rs  cli_integration_tests.rs  cli_tests.rs  event_tests.rs  state_tests.rs  validation_tests.rs  writer_tests.rs
