[package]
name = "spool-ui"
version = "0.4.0"
edition = "2021"
rust-version = "1.70"
description = "TUI for spool - git-native task management"
license = "MIT"
repository = "https://github.com/iamnbutler/spool"

[[bin]]
name = "spool-ui"
path = "src/main.rs"

[dependencies]
spool = { path = "../spool" }
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.28"
